TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_after.dot
digraph AST {
  "128814121945696" [label="Start"];
  "128814121945696" -> "128814121956352";
  "128814121956352" [label="Code"];
  "128814121956352" -> "128814121956784";
  "128814121956784" [label="Function"];
  "128814121956784" -> "128814121952992";
  "128814121956784" -> "128814121944256";
  "128814121956784" -> "128814121955248";
  "128814121952992" [label="main"];
  "128814121944256" [label="Parameters"];
  "128814121955248" [label="Code"];
  "128814121955248" -> "128814121954816";
  "128814121955248" -> "128814121944448";
  "128814121955248" -> "128814121956928";
  "128814121954816" [label="Declaration"];
  "128814121954816" -> "128814121945600";
  "128814121954816" -> "128814121955200";
  "128814121945600" [label="main"];
  "128814121955200" [label="3"];
  "128814121944448" [label="Comment"];
  "128814121944448" -> "128814121956976";
  "128814121956976" [label=" This shouldn't return an error!"];
  "128814121956928" [label="Return"];
}
